--- a/AbkarFE/src/components/OnBoard/Community/Community.module.css
+++ b/AbkarFE/src/components/OnBoard/Community/Community.module.css
@@ -36,9 +36,29 @@
     letter-spacing: -0.4px;
     color: #fff;
     /* text-shadow: -3px 4px 0px #000, -3px 1px 0px #000; */
-    -webkit-text-stroke-width: 1.5px;
+    /* -webkit-text-stroke-width: 1.5px;
   -webkit-text-stroke-color: rgba(0, 0, 0, 1);
-  text-shadow: 0px 4px 0px  rgba(0, 0, 0, 1);
+  text-shadow: 0px 4px 0px  rgba(0, 0, 0, 1); */
+  --s:2px;
+  text-shadow: 
+   0 4px var(--s) #000, 
+   0 4px var(--s) #000, 
+   0 4px var(--s) #000, 
+   0 4px var(--s) #000, 
+   0 4px var(--s) #000, 
+   0 4px var(--s) #000, 
+   0 4px var(--s) #000, 
+   0 0 var(--s) #000, 
+   0 0 var(--s) #000, 
+   0 0 var(--s) #000, 
+   0 0 var(--s) #000, 
+   0 0 var(--s) #000,
+   0 0 var(--s) #000, 
+   0 0 var(--s) #000, 
+   0 0 var(--s) #000, 
+   0 0 var(--s) #000, 
+   0 0 var(--s) #000, 
+   0 0 var(--s) #000;
   
   
 
@@ -57,7 +77,7 @@
         bottom: 0;
         right: 0;
         left: -10px;
-        width: 102.7%;
+        width: 103%;
         height: 187px;
         overflow-x: hidden !important;
     }
@@ -99,12 +119,14 @@
     z-index: -1;
 }
 .CommunityParagraph{
-    font-family: "Omnes Arabic";
-font-size: 20px;
+font-family: "Omnes Arabic Semi Bold";
+font-size: 18px;
 font-weight: 600;
 line-height: 26px;
 letter-spacing: -0.40799999237060547px;
 color: rgba(0, 0, 0, 1);
+margin: 0;
+margin-top: 10px;
 
 }
 .CommunityBtn{
@@ -120,7 +142,7 @@ line-height: 22px;
 letter-spacing: -0.40799999237060547px;
 text-align: center;
 color: rgba(255,255,255,1);
-border-radius: 15px;
+border-radius: 14px;
 
 }
 /* ///////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -144,17 +166,17 @@ width: 330px;
 }
 @media screen and (min-width: 441px) and (max-width:580px) {
     .communitySite{
-width: 530px;  
+width: 520px;  
     }
     
     .iframe{
-        width: 520px;
+        width: 510px;
         height: 310px;
         margin-top: 30px;
     }
     
     .communityFrame{
-        width: 530px;
+        width: 520px;
     }
     .CommunityParagraph{
         font-size: 30px;
