--- a/AbkarFE/src/components/OnBoard/PageOne/PageOne.module.css
+++ b/AbkarFE/src/components/OnBoard/PageOne/PageOne.module.css
@@ -1,17 +1,4 @@
-@font-face {
-    font-family: "Ala Typoo Medium";
-    src: url("../../../assets/AlaTypoo-Medium.ttf") format('truetype');
-}
 
-@font-face {
-    font-family: "Omnes Arabic";
-    src: url("../../../assets/OMNES-ARABIC-REGULAR.ttf") format('truetype');
-}
-
-@font-face {
-    font-family: "AA-GALAXY";
-    src: url("../../../assets/AA-GALAXY.otf") format('truetype');
-}
 
 body {
     overflow-x: hidden !important;
@@ -46,7 +33,7 @@ body {
 .editIconP {
     color: #EA9F3F;
     text-align: right;
-    font-family: "Omnes Arabic";
+    font-family: "Omnes Arabic Bold";
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
@@ -69,9 +56,6 @@ body {
 .P3bkr {
     color: var(--Yellow, #FFD200);
     text-align: center;
-    text-shadow: 0px 4px 0px #000;
-    -webkit-text-stroke-width: 2;
-    -webkit-text-stroke-color: #000;
     font-family: "Ala Typoo Medium";
     font-size: 64px;
     font-style: normal;
@@ -82,6 +66,41 @@ body {
     width: 84px;
     height: 50px;
     flex-shrink: 0;
+    --s:3px;
+    text-shadow: 
+     0 4px var(--s) #000, 
+     0 4px var(--s) #000, 
+     0 4px var(--s) #000, 
+     0 4px var(--s) #000, 
+     0 4px var(--s) #000, 
+     0 4px var(--s) #000, 
+     0 4px var(--s) #000, 
+     0 0 var(--s) #000, 
+     0 0 var(--s) #000, 
+     0 0 var(--s) #000, 
+     0 0 var(--s) #000, 
+     0 0 var(--s) #000, 
+     0 0 var(--s) #000;
+}
+
+@media only screen and (max-width: 900px) {
+    .head {
+        width: 100vw;
+        overflow: hidden !important;
+    }
+
+    .headimage {
+        position: absolute;
+        top: -20px;
+        bottom: 0;
+        right: 0;
+        left: -20px;
+        width: 100%;
+        height: 187px;
+        overflow: hidden;
+    }
+
+    
 }
 
 /* ///////////////////////////////////////////////////////////////////////////////////////////// */
@@ -97,7 +116,7 @@ body {
     text-align: center;
     color: #fff;
     text-shadow: -3px 4px 0px #000,-3px 1px 0px #000;
-    margin-bottom: 70px;
+    /* margin-bottom: 70px; */
 
 }
 .computerParagraph{
@@ -141,9 +160,16 @@ font-weight: 600;
 line-height: 22px;
 letter-spacing: -0.40799999237060547px;
 text-align: center;
-color: rgba(255, 255, 255, 1) !important;
+color: rgba(255, 255, 255, 1) ;
 background: linear-gradient(0deg, #1FCC7B, #1FCC7B),
-linear-gradient(0deg, #000000, #000000) !important;
+linear-gradient(0deg, #000000, #000000);
+border: 2px solid #000000;
+width: 137px;
+height: 48px;
+border-radius: 14px;
+box-shadow: 0px 4px 0px 0px #000000;
+
+
 }
 
 @media screen and (max-width: 912px) {
