--- a/AbkarFE/src/components/Quiz/seting/Setting.module.css
+++ b/AbkarFE/src/components/Quiz/seting/Setting.module.css
@@ -130,7 +130,7 @@
 	background-color: transparent !important;
 	border: none;
 	color: #000;
-	font-family: "Omnes Arabic";
+	font-family: "Omnes Arabic Medium";
 	font-size: 24px;
 	font-style: normal;
 	font-weight: 500;
