--- a/AbkarFE/src/components/Quiz/Hello/hello.module.css
+++ b/AbkarFE/src/components/Quiz/Hello/hello.module.css
@@ -352,7 +352,7 @@
 .content {
 	color: #000;
 	text-align: center;
-	font-family: "Omnes Arabic";
+	font-family: "Omnes Arabic Semi Bold";
 	font-size: 24px;
 	font-style: normal;
 	font-weight: 600;
@@ -380,7 +380,7 @@
 	flex-shrink: 0;
 	color: #fff;
 	text-align: center;
-	font-family: "Omnes Arabic";
+	font-family: "Omnes Arabic Semi Bold";
 	font-size: 32px;
 	font-style: normal;
 	font-weight: 600;
