--- a/AbkarFE/src/components/OnBoard/MoreLearning/MoreLearning.module.css
+++ b/AbkarFE/src/components/OnBoard/MoreLearning/MoreLearning.module.css
@@ -1,4 +1,77 @@
+.setting{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background: #000000BF;
 
+}
+.settingTitle{
+    font-family: "Omnes Arabic Medium";
+font-size: 40px;
+font-weight: 600;
+line-height: 26px;
+letter-spacing: -0.40799999237060547px;
+text-align: center;
+color: #FFFFFF;
+border: 6px solid #00DCEA;
+width: 333px;
+height: 78px;
+display: flex;
+padding-top: 10px;
+justify-content: center;
+border-radius: 20px;
+position: relative;
+}
+.settingContent{
+position: absolute;
+width: 407px;
+height: 193px;
+border-radius: 20px;
+border: 6px solid #00dcea;
+background: #FFFAED;
+top: 55px;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+.settingPassword{
+    width: 371px;
+height: 65px;
+top: 358px;
+left: 534px;
+border-radius: 20px;
+background: #DDDDDD;
+border: 6px solid #00DCEA;
+margin-top: 16px;
+font-family: "Omnes Arabic";
+font-size: 48px;
+font-weight: 500;
+line-height: 22px;
+letter-spacing: -0.40799999237060547px;
+padding:0 20px;
+
+}
+.settingBtn{
+width: 369px;
+height: 65px;
+border-radius: 20px;
+background: #00DCEA;
+outline: none;
+border: none;
+margin-top: 20px;
+font-family: "Omnes Arabic Semi Bold";
+font-size: 40px;
+font-weight: 600;
+line-height: 26px;
+letter-spacing: -0.40799999237060547px;
+text-align: center;
+color: #fff;
+
+
+}
 
 .head {
     width: 100%;
@@ -87,19 +160,7 @@ margin-bottom: 20px;
         overflow-x: hidden;
     }
 }
-/* 
-@media screen and (max-width: 440px) {
-    .moreLearning {
-        font-size: 25px;
-    }
-
-    .videoIcon {
-        width: 35px !important;
-        margin-left: 10px;
-    }
-} */
-/* ////////////////////////////////////////////////////////////////////////////////////// */
-/*                            learnContainer                                */
+/*                             learnContainer                                */
 .learnContainer{
     direction: rtl;
     width: 75% !important;
@@ -114,14 +175,15 @@ color: rgba(0, 0, 0, 1);
 
 }
 .abuotLearn{
-    font-family: "Omnes Arabic Medium";
+margin: 0;
+margin-left: 50px;
+font-family:"Omnes Arabic";
 font-size: 20px;
 font-weight: 500;
 line-height: 36px;
 letter-spacing: -0.40799999237060547px;
 text-align: right;
-margin: 0;
-margin-left: 50px;
+
 
 }
 .learnBtnDirection1 {
