--- a/AbkarFE/src/components/login-signup/style/main.css
+++ b/AbkarFE/src/components/login-signup/style/main.css
@@ -12,27 +12,27 @@ body{
 
 @font-face {
   font-family: "Ala Typoo Medium";
-  src: url("../../assets/AlaTypoo-Medium.ttf") format("truetype");
+  src: url("../../../assets/AlaTypoo-Medium.ttf") format("truetype");
 }
 @font-face {
   font-family: "Omnes Arabic Bold";
-  src: url("../../assets/OMNES-ARABIC-BOLD.ttf") format("truetype");
+  src: url("../../../assets/OMNES-ARABIC-BOLD.ttf") format("truetype");
 }
 @font-face {
   font-family: "Omnes Arabic";
-  src: url("../../assets/OMNES-ARABIC-REGULAR.ttf") format("truetype");
+  src: url("../../../assets/OMNES-ARABIC-REGULAR.ttf") format("truetype");
 }
 @font-face {
   font-family: "Omnes Arabic Semi Bold";
-  src: url("../../assets/OMNES-ARABIC-SEMI-BOLD.ttf") format("truetype");
+  src: url("../../../assets/OMNES-ARABIC-SEMI-BOLD.ttf") format("truetype");
 }
 @font-face {
   font-family: "Omnes Arabic Medium";
-  src: url("../../assets/OMNES-ARABIC-MEDIUM.ttf") format("truetype");
+  src: url("../../../assets/OMNES-ARABIC-MEDIUM.ttf") format("truetype");
 }
 @font-face {
   font-family: "AA-GALAXY";
-  src: url("../../assets/AA-GALAXY.otf") format("truetype");
+  src: url("../../../assets/AA-GALAXY.otf") format("truetype");
 }
 .page {
   opacity: 1;
