changed the navigation

--- a/AbkarFE/src/components/login-signup/style/_age.scss
+++ b/AbkarFE/src/components/login-signup/style/_age.scss
@@ -24,7 +24,7 @@
       font-size: 60px;
       font-style: normal;
       font-weight: 700;
-      line-height: 22px; /* 36.667% */
+      line-height: 22px;
       letter-spacing: -0.408px;
 
       @media (max-width: 680px) {
