--- a/AbkarFE/src/components/login-signup/style/main.css
+++ b/AbkarFE/src/components/login-signup/style/main.css
@@ -2,9 +2,7 @@
   box-sizing: border-box;
   margin: 0;
 }
-body{
-  overflow-x: hidden !important;
-}
+
 :root {
   --background-color: #00dcea;
   --window-background: #fffaed;
@@ -15,20 +13,8 @@ body{
   src: url("../../../assets/AlaTypoo-Medium.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Omnes Arabic Bold";
-  src: url("../../../assets/OMNES-ARABIC-BOLD.ttf") format("truetype");
-}
-@font-face {
   font-family: "Omnes Arabic";
   src: url("../../../assets/OMNES-ARABIC-REGULAR.ttf") format("truetype");
-}
-@font-face {
-  font-family: "Omnes Arabic Semi Bold";
-  src: url("../../../assets/OMNES-ARABIC-SEMI-BOLD.ttf") format("truetype");
-}
-@font-face {
-  font-family: "Omnes Arabic Medium";
-  src: url("../../../assets/OMNES-ARABIC-MEDIUM.ttf") format("truetype");
 }
 @font-face {
   font-family: "AA-GALAXY";
@@ -67,6 +53,7 @@ body{
   color: var(--Yellow, #ffd200);
   text-align: center;
   text-shadow: 0px 4px 0px #000;
+  -webkit-text-stroke-width: 2;
   -webkit-text-stroke-color: #000;
   font-family: "Ala Typoo Medium";
   font-size: 200px;
@@ -74,6 +61,7 @@ body{
   font-weight: 700;
   line-height: 22px;
   letter-spacing: -0.408px;
+  text-shadow: #000000;
 }
 @media (max-width: 680px) {
   .PreLoader .logo span {
@@ -135,7 +123,7 @@ body{
   font-size: 60px;
   font-style: normal;
   font-weight: 700;
-  line-height: 22px; /* 36.667% */
+  line-height: 22px;
   letter-spacing: -0.408px;
 }
 @media (max-width: 680px) {
