--- a/AbkarFE/src/components/login-signup/style/main.css
+++ b/AbkarFE/src/components/login-signup/style/main.css
@@ -14,12 +14,21 @@
 }
 @font-face {
   font-family: "Omnes Arabic";
-  src: url("../../../assets/OMNES-ARABIC-REGULAR.ttf") format("truetype");
+  src: url("../../../assets/OMNES-ARABIC-MEDIUM.ttf") format("truetype");
 }
 @font-face {
   font-family: "AA-GALAXY";
   src: url("../../../assets/AA-GALAXY.otf") format("truetype");
 }
+@font-face {
+  font-family: "Omnes Arabic Bold";
+  src: url("../../../assets/OMNES-ARABIC-BOLD.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Omnes Arabic Semi Bold";
+  src: url("../../../assets/OMNES-ARABIC-SEMI-BOLD.ttf") format("truetype");
+}
+
 .page {
   opacity: 1;
   transition: opacity 0.5s ease-in-out;
